--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -80,6 +80,7 @@
         <div class="js-show-find category-guid" style="display: none;"></div>
       </div>
     </div>
+    <foot></foot>
   </div>
 
 </body>
