完成商品列表页功能

--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -77,10 +77,11 @@
           </ul>
           <div class="loading-more" v-show="loading"><span></span></div>
         </div>
-        <div class="js-show-find category-guid" style="display: none;"></div>
+        <!-- <div class="js-show-find category-guid" style="display: none;"></div> -->
       </div>
     </div>
     <foot></foot>
+    
   </div>
 
 </body>
