--- a/src/pages/goods/goods.html
+++ b/src/pages/goods/goods.html
@@ -87,8 +87,8 @@
               </div>
             </div>
             <div class="sku-detail adv-opts">
-              <div class="sku-detail-inner adv-opts-inner">
-                <dl class="sku-group select-sku js-select-sku">
+              <div class="sku-detail-inner adv-opts-inner" >
+                <dl class="sku-group select-sku js-select-sku" @click="chooseSku(1)">
                   <dt><span class="js-sku-label">选择</span>：</dt>
                   <dd class="js-sku-value">
                     <span class="sku-item">净含量</span> </dd>
@@ -193,10 +193,10 @@
                 <!-- 尚未开售 -->
                 <div class="btn-cart">
                   <a href="https://h5.youzan.com/v2/showcase/goods?alias=1y7n2wi58q1as&amp;source=yzapp&amp;f_platform=yzapp&amp;reft=1499937523785&amp;spm=mars20003"
-                    class="js-add-cart">加入购物车</a>
+                    class="js-add-cart" @click="chooseSku(2)">加入购物车</a>
                 </div>
                 <div class="btn-buy">
-                  <a href="javascript:;" class="js-buy-it">立即购买</a>
+                  <a href="javascript:;" class="js-buy-it" @click="chooseSku(3)">立即购买</a>
                 </div>
               </div>
             </div>
@@ -483,14 +483,14 @@
           </div>
         </div>
         <div class="adv-opts layout-content" style="max-height: 554px;">
-          <div class="goods-models js-sku-views block block-list border-top-0">
+          <div class="goods-models js-sku-views block block-list border-top-0" v-for="sku in details.skuList">
             <dl class="clearfix block-item sku-list-container">
               <dt class="model-title sku-sel-title">
-                <label>净含量：</label>
+                <label>{{sku.title}}：</label>
               </dt>
               <dd>
                 <ul class="model-list sku-sel-list">
-                  <li class="tag sku-tag pull-left ellipsis active">4500g-5000g</li>
+                  <li class="tag sku-tag pull-left ellipsis"  :class="{active: item.active}" v-for="(item, index) in sku.lists"  @click="chooseTag(item,index,sku.lists)">{{sku.tag}}</li>
                 </ul>
               </dd>
             </dl>
@@ -518,17 +518,17 @@
             </div>
           </div>
           <!-- <div class="bottom-padding"></div> -->
-          <div class="confirm-action content-foot clearfix">
+          <div class="confirm-action content-foot clearfix" v-show="skuType==2">
             <!-- 加入购物车 -->
             <div class="big-btn-1-1" style="display: none;">
               <a href="javascript:;" class="js-confirm-it big-btn red-btn main-btn">加入购物车</a>
             </div>
             <!-- 立即购买 -->
-            <div class="big-btn-1-1">
+            <div class="big-btn-1-1" v-show="skuType==3">
               <a href="javascript:;" class="js-confirm-it big-btn red-btn main-btn">下一步</a>
             </div>
             <!-- 选择规格 -->
-            <div class="big-btn-2-1" style="display: none;">
+            <div class="big-btn-2-1" style="display: none;" v-show="skuType==1">
               <a href="javascript:;" class="js-mutiBtn-confirm cart big-btn orange-btn vice-btn">加入购物车</a>
               <a href="javascript:;" class="js-mutiBtn-confirm confirm big-btn red-btn main-btn">立即购买</a>
             </div>
@@ -538,6 +538,7 @@
       <div class="motify" style="display: none;">
         <div class="motify-inner">已成功添加到购物车</div>
       </div>
+      <div class="loading-more" v-if="!details"></div>
     </div>
   </div>
 </body>
