--- a/src/pages/goods/goods.html
+++ b/src/pages/goods/goods.html
@@ -21,7 +21,7 @@
 </head>
 
 <body class=" body-fixed-bottom default-theme">
-  <div id="app" >
+  <div id="app">
     <div v-if="details" v-cloak>
       <div class="container wap-goods internal-purchase" style="min-height: 617px;">
         <div class="content no-sidebar">
@@ -87,7 +87,7 @@
               </div>
             </div>
             <div class="sku-detail adv-opts">
-              <div class="sku-detail-inner adv-opts-inner" >
+              <div class="sku-detail-inner adv-opts-inner">
                 <dl class="sku-group select-sku js-select-sku" @click="chooseSku(1)">
                   <dt><span class="js-sku-label">选择</span>：</dt>
                   <dd class="js-sku-value">
@@ -147,30 +147,22 @@
                         <p><img data-origin-width="720" data-origin-height="713" class="js-richtext-img-lazy js-view-image-item"
                             src="https://img.yzcdn.cn/upload_files/2017/05/15/FhU7lMPonHtR8qP4zP4aIKRVkObr.jpg?imageView2/2/w/730/h/0/q/75/format/webp"
                             data-src="https://img.yzcdn.cn/upload_files/2017/05/15/FhU7lMPonHtR8qP4zP4aIKRVkObr.jpg!730x0.jpg">
-                          <img
-                            data-origin-width="720" data-origin-height="494" class="js-richtext-img-lazy js-view-image-item"
-                            src="https://img.yzcdn.cn/upload_files/2017/05/15/FvYqk840X0ubXwFE6Nh0unihqIKm.jpg?imageView2/2/w/730/h/0/q/75/format/webp"
-                            data-src="https://img.yzcdn.cn/upload_files/2017/05/15/FvYqk840X0ubXwFE6Nh0unihqIKm.jpg!730x0.jpg"><img data-origin-width="720" data-origin-height="916" class="js-richtext-img-lazy js-view-image-item"
-                              src="https://img.yzcdn.cn/upload_files/2017/05/15/FvIfNYewmohf3b3V2yA_hr6whV-A.jpg?imageView2/2/w/730/h/0/q/75/format/webp"
-                              data-src="https://img.yzcdn.cn/upload_files/2017/05/15/FvIfNYewmohf3b3V2yA_hr6whV-A.jpg!730x0.jpg">
-                            <img
-                              data-origin-width="720" data-origin-height="656" class="js-richtext-img-lazy js-view-image-item"
-                              src="https://img.yzcdn.cn/upload_files/2017/05/15/FlYJPxbAgmkKjWtvLxwqjUMJHUG3.jpg?imageView2/2/w/730/h/0/q/75/format/webp"
-                              data-src="https://img.yzcdn.cn/upload_files/2017/05/15/FlYJPxbAgmkKjWtvLxwqjUMJHUG3.jpg!730x0.jpg"><img data-origin-width="720" data-origin-height="513" class="js-richtext-img-lazy js-view-image-item"
-                                src="https://img.yzcdn.cn/upload_files/2017/05/15/FmpaiyW8GbpV2I2QKwm7stoRQkOJ.jpg?imageView2/2/w/730/h/0/q/75/format/webp"
-                                data-src="https://img.yzcdn.cn/upload_files/2017/05/15/FmpaiyW8GbpV2I2QKwm7stoRQkOJ.jpg!730x0.jpg">
-                              <img
-                                data-origin-width="720" data-origin-height="691" class="js-richtext-img-lazy js-view-image-item"
-                                src="https://img.yzcdn.cn/upload_files/2017/05/15/Fs5rqsKzMe7qIHhuQAqyM1lcjmfB.jpg?imageView2/2/w/730/h/0/q/75/format/webp"
-                                data-src="https://img.yzcdn.cn/upload_files/2017/05/15/Fs5rqsKzMe7qIHhuQAqyM1lcjmfB.jpg!730x0.jpg"><img data-origin-width="720" data-origin-height="531" class="js-richtext-img-lazy js-view-image-item"
-                                  src="https://img.yzcdn.cn/upload_files/2017/05/15/Foor6_Ipc-Lo9eOX_H_a8g4kWPRW.jpg?imageView2/2/w/730/h/0/q/75/format/webp"
-                                  data-src="https://img.yzcdn.cn/upload_files/2017/05/15/Foor6_Ipc-Lo9eOX_H_a8g4kWPRW.jpg!730x0.jpg">
-                                <img
-                                  data-origin-width="720" data-origin-height="932" class="js-richtext-img-lazy js-view-image-item"
-                                  src="https://img.yzcdn.cn/upload_files/2017/05/15/FuuNBFbA_vMYmI6FFbNOemmDX9bd.jpg?imageView2/2/w/730/h/0/q/75/format/webp"
-                                  data-src="https://img.yzcdn.cn/upload_files/2017/05/15/FuuNBFbA_vMYmI6FFbNOemmDX9bd.jpg!730x0.jpg"><img data-origin-width="720" data-origin-height="707" class="js-richtext-img-lazy js-view-image-item"
-                                    src="https://img.yzcdn.cn/upload_files/2017/05/15/FotgIfOUlMtvhtH0dhRLlmpKJLv7.jpg?imageView2/2/w/730/h/0/q/75/format/webp"
-                                    data-src="https://img.yzcdn.cn/upload_files/2017/05/15/FotgIfOUlMtvhtH0dhRLlmpKJLv7.jpg!730x0.jpg"></p>
+                          <img data-origin-width="720" data-origin-height="494" class="js-richtext-img-lazy js-view-image-item" src="https://img.yzcdn.cn/upload_files/2017/05/15/FvYqk840X0ubXwFE6Nh0unihqIKm.jpg?imageView2/2/w/730/h/0/q/75/format/webp"
+                            data-src="https://img.yzcdn.cn/upload_files/2017/05/15/FvYqk840X0ubXwFE6Nh0unihqIKm.jpg!730x0.jpg">
+                          <img data-origin-width="720" data-origin-height="916" class="js-richtext-img-lazy js-view-image-item" src="https://img.yzcdn.cn/upload_files/2017/05/15/FvIfNYewmohf3b3V2yA_hr6whV-A.jpg?imageView2/2/w/730/h/0/q/75/format/webp"
+                            data-src="https://img.yzcdn.cn/upload_files/2017/05/15/FvIfNYewmohf3b3V2yA_hr6whV-A.jpg!730x0.jpg">
+                          <img data-origin-width="720" data-origin-height="656" class="js-richtext-img-lazy js-view-image-item" src="https://img.yzcdn.cn/upload_files/2017/05/15/FlYJPxbAgmkKjWtvLxwqjUMJHUG3.jpg?imageView2/2/w/730/h/0/q/75/format/webp"
+                            data-src="https://img.yzcdn.cn/upload_files/2017/05/15/FlYJPxbAgmkKjWtvLxwqjUMJHUG3.jpg!730x0.jpg">
+                          <img data-origin-width="720" data-origin-height="513" class="js-richtext-img-lazy js-view-image-item" src="https://img.yzcdn.cn/upload_files/2017/05/15/FmpaiyW8GbpV2I2QKwm7stoRQkOJ.jpg?imageView2/2/w/730/h/0/q/75/format/webp"
+                            data-src="https://img.yzcdn.cn/upload_files/2017/05/15/FmpaiyW8GbpV2I2QKwm7stoRQkOJ.jpg!730x0.jpg">
+                          <img data-origin-width="720" data-origin-height="691" class="js-richtext-img-lazy js-view-image-item" src="https://img.yzcdn.cn/upload_files/2017/05/15/Fs5rqsKzMe7qIHhuQAqyM1lcjmfB.jpg?imageView2/2/w/730/h/0/q/75/format/webp"
+                            data-src="https://img.yzcdn.cn/upload_files/2017/05/15/Fs5rqsKzMe7qIHhuQAqyM1lcjmfB.jpg!730x0.jpg">
+                          <img data-origin-width="720" data-origin-height="531" class="js-richtext-img-lazy js-view-image-item" src="https://img.yzcdn.cn/upload_files/2017/05/15/Foor6_Ipc-Lo9eOX_H_a8g4kWPRW.jpg?imageView2/2/w/730/h/0/q/75/format/webp"
+                            data-src="https://img.yzcdn.cn/upload_files/2017/05/15/Foor6_Ipc-Lo9eOX_H_a8g4kWPRW.jpg!730x0.jpg">
+                          <img data-origin-width="720" data-origin-height="932" class="js-richtext-img-lazy js-view-image-item" src="https://img.yzcdn.cn/upload_files/2017/05/15/FuuNBFbA_vMYmI6FFbNOemmDX9bd.jpg?imageView2/2/w/730/h/0/q/75/format/webp"
+                            data-src="https://img.yzcdn.cn/upload_files/2017/05/15/FuuNBFbA_vMYmI6FFbNOemmDX9bd.jpg!730x0.jpg">
+                          <img data-origin-width="720" data-origin-height="707" class="js-richtext-img-lazy js-view-image-item" src="https://img.yzcdn.cn/upload_files/2017/05/15/FotgIfOUlMtvhtH0dhRLlmpKJLv7.jpg?imageView2/2/w/730/h/0/q/75/format/webp"
+                            data-src="https://img.yzcdn.cn/upload_files/2017/05/15/FotgIfOUlMtvhtH0dhRLlmpKJLv7.jpg!730x0.jpg"></p>
                       </div>
                       <div class="price-intro">
                         <h4>划线价格说明<i class="icon-arrow"></i></h4>
@@ -192,8 +184,7 @@
               <div class="stick-bottom-btns">
                 <!-- 尚未开售 -->
                 <div class="btn-cart">
-                  <a href="javascript:;"
-                    class="js-add-cart" @click="chooseSku(2)" >加入购物车</a>
+                  <a href="javascript:;" class="js-add-cart" @click="chooseSku(2)">加入购物车</a>
                 </div>
                 <div class="btn-buy">
                   <a href="javascript:;" class="js-buy-it" @click="chooseSku(3)">立即购买</a>
@@ -209,7 +200,7 @@
             <a class="js-show-more-btn icon show-more-btn hide"></a>
           </div>
         </div> -->
-        <!-- 购物车图标 -->
+            <!-- 购物车图标 -->
             <div id="right-icon" class="js-right-icon " v-show="isAddCart">
               <div class="js-right-icon-container right-icon-container clearfix">
                 <a id="global-cart" href="cart.html" class="icon new s0" style="">
@@ -452,95 +443,95 @@
         <form class="search-form" action="https://h5.youzan.com/v2/search" method="GET">
           <input type="search" class="search-input" placeholder="搜索商品" name="q" value="">
           <input type="hidden" name="kdt_id" value="16546132"><a class="js-search-cancel search-cancel" href="javascript:;">取消</a>
-          <span
-            class="search-icon"></span><span class="close-icon hide"></span></form>
+          <span class="search-icon"></span><span class="close-icon hide"></span></form>
         <div class="history-wrap center">
           <ul class="history-list search-recom-list js-history-list clearfix"></ul><a class="tag tag-clear js-tag-clear c-gray-darker hide" href="javascript:;">清除历史搜索</a></div>
       </div>
       <!-- 阴影层 -->
+
       <div id="yFzBKP9GDL" style="height: 100%; position: fixed; top: 0px; left: 0px; right: 0px; background-color: rgba(0, 0, 0, 0.7); z-index: 1000; transition: none 0.2s ease; opacity: 1;"
-      v-show="showSku" @click="showSku=false"
-      ></div>
-      <div id="QfEqtDbeK9" class="sku-layout sku-box-shadow popup" style="overflow: hidden; position: absolute; z-index: 1000; background: white; bottom: 0px; left: 0px; right: 0px; visibility: visible; transform: translate3d(0px, 0px, 0px); transition: all 300ms ease; opacity: 1;"
-      v-show="showSku"
-      >
-        <div class="sku-layout-title name-card sku-name-card">
-          <div class="thumb"><img class="js-goods-thumb goods-thumb" src="https://img.yzcdn.cn/upload_files/2017/07/12/FkSvYz8FLLD9-t0smXO43hF6ov7S.jpg?imageView2/2/w/100/h/100/q/75/format/webp?imageView2/2/w/100/h/100/q/75/format/webp"
-              alt=""></div>
-          <div class="detail goods-base-info clearfix">
-            <p class="title c-black ellipsis">寻找田野|最正宗的上海南汇8424 得奖最多奥运会指定西瓜1只/箱 9-11斤</p>
-            <div class="goods-price clearfix">
-              <div class="current-price pull-left c-black">
-                <span class="price-name pull-left font-size-14 c-orange">¥</span><i class="js-goods-price price font-size-16 vertical-middle c-orange">98.00</i>
-              </div>
-              <div class="original-price vertical-middle font-size-14 line-through">108</div>
-            </div>
-          </div>
-          <div class="js-cancel sku-cancel"  @click="showSku=false">
-            <div class="cancel-img"></div>
-          </div>
-        </div>
-        <div class="sku-detail adv-opts hotel-checkin-select" style="border: none; margin: 0; display: none;">
-          <div class="sku-detail-inner adv-opts-inner-addons">
-            <dl class="sku-group select-sku js-select-checkin-date">
-              <dt>时间：</dt>
-              <dd class="js-checkin-date-value">选择入住时间</dd>
-            </dl>
-          </div>
-        </div>
-        <div class="adv-opts layout-content" style="max-height: 554px;">
-          <div class="goods-models js-sku-views block block-list border-top-0" v-for="sku in details.skuList">
-            <dl class="clearfix block-item sku-list-container">
-              <dt class="model-title sku-sel-title">
-                <label>{{sku.title}}：</label>
-              </dt>
-              <dd>
-                <ul class="model-list sku-sel-list">
-                  <li class="tag sku-tag pull-left ellipsis"  :class="{active: item.active}" v-for="(item, index) in sku.lists"  @click="chooseTag(item,index,sku.lists)">{{item.tag}}</li>
-                </ul>
-              </dd>
-            </dl>
-            <dl class="clearfix block-item">
-              <dt class="sku-num pull-left">
-                <label>购买数量：</label>
-              </dt>
-              <dd class="sku-quantity-contaienr">
-                <dl class="clearfix">
-                  <div class="quantity">
-                    <button class="minus" type="button"  :class="{disabled: skuNum===1}"></button>
-                    <input type="text" class="txt" pattern="[0-9]*"  :value="skuNum">
-                    <button class="plus" type="button"></button>
-                    <div class="response-area response-area-minus" @click="changeSkuNum(-1)"></div>
-                    <div class="response-area response-area-plus" @click="changeSkuNum(1)"></div>
-                  </div>
-                </dl>
-              </dd>
-              <dt class="other-info">
-                <div class="stock">剩余{{details.remain}}件
+        v-show="showSku" @click="showSku=false"></div>
+      <transition name="fade">
+        <div id="QfEqtDbeK9" class="sku-layout sku-box-shadow popup" style="overflow: hidden; position: absolute; z-index: 1000; background: white; bottom: 0px; left: 0px; right: 0px; visibility: visible; transform: translate3d(0px, 0px, 0px); transition: all 300ms ease; opacity: 1;"
+          v-show="showSku">
+          <div class="sku-layout-title name-card sku-name-card">
+            <div class="thumb"><img class="js-goods-thumb goods-thumb" src="https://img.yzcdn.cn/upload_files/2017/07/12/FkSvYz8FLLD9-t0smXO43hF6ov7S.jpg?imageView2/2/w/100/h/100/q/75/format/webp?imageView2/2/w/100/h/100/q/75/format/webp"
+                alt=""></div>
+            <div class="detail goods-base-info clearfix">
+              <p class="title c-black ellipsis">寻找田野|最正宗的上海南汇8424 得奖最多奥运会指定西瓜1只/箱 9-11斤</p>
+              <div class="goods-price clearfix">
+                <div class="current-price pull-left c-black">
+                  <span class="price-name pull-left font-size-14 c-orange">¥</span><i class="js-goods-price price font-size-16 vertical-middle c-orange">98.00</i>
                 </div>
-              </dt>
-            </dl>
-            <div class="block-item block-item-messages" style="display: none;">
+                <div class="original-price vertical-middle font-size-14 line-through">108</div>
+              </div>
+            </div>
+            <div class="js-cancel sku-cancel" @click="showSku=false">
+              <div class="cancel-img"></div>
             </div>
           </div>
-          <!-- <div class="bottom-padding"></div> -->
-          <div class="confirm-action content-foot clearfix" v-show="true">
-            <!-- 加入购物车 -->
-            <div class="big-btn-1-1" v-show="skuType==2">
-              <a href="javascript:;" class="js-confirm-it big-btn red-btn main-btn" @click="addCart">加入购物车</a>
+          <div class="sku-detail adv-opts hotel-checkin-select" style="border: none; margin: 0; display: none;">
+            <div class="sku-detail-inner adv-opts-inner-addons">
+              <dl class="sku-group select-sku js-select-checkin-date">
+                <dt>时间：</dt>
+                <dd class="js-checkin-date-value">选择入住时间</dd>
+              </dl>
             </div>
-            <!-- 立即购买 -->
-            <div class="big-btn-1-1" v-show="skuType==3">
-              <a href="javascript:;" class="js-confirm-it big-btn red-btn main-btn">下一步</a>
+          </div>
+          <div class="adv-opts layout-content" style="max-height: 554px;">
+            <div class="goods-models js-sku-views block block-list border-top-0" v-for="sku in details.skuList">
+              <dl class="clearfix block-item sku-list-container">
+                <dt class="model-title sku-sel-title">
+                  <label>{{sku.title}}：</label>
+                </dt>
+                <dd>
+                  <ul class="model-list sku-sel-list">
+                    <li class="tag sku-tag pull-left ellipsis" :class="{active: item.active}" v-for="(item, index) in sku.lists" @click="chooseTag(item,index,sku.lists)">{{item.tag}}</li>
+                  </ul>
+                </dd>
+              </dl>
+              <dl class="clearfix block-item">
+                <dt class="sku-num pull-left">
+                  <label>购买数量：</label>
+                </dt>
+                <dd class="sku-quantity-contaienr">
+                  <dl class="clearfix">
+                    <div class="quantity">
+                      <button class="minus" type="button" :class="{disabled: skuNum===1}"></button>
+                      <input type="text" class="txt" pattern="[0-9]*" :value="skuNum">
+                      <button class="plus" type="button"></button>
+                      <div class="response-area response-area-minus" @click="changeSkuNum(-1)"></div>
+                      <div class="response-area response-area-plus" @click="changeSkuNum(1)"></div>
+                    </div>
+                  </dl>
+                </dd>
+                <dt class="other-info">
+                  <div class="stock">剩余{{details.remain}}件
+                  </div>
+                </dt>
+              </dl>
+              <div class="block-item block-item-messages" style="display: none;">
+              </div>
             </div>
-            <!-- 选择规格 -->
-            <div class="big-btn-2-1"  v-show="skuType==1">
-              <a href="javascript:;" class="js-mutiBtn-confirm cart big-btn orange-btn vice-btn" @click="addCart">加入购物车</a>
-              <a href="javascript:;" class="js-mutiBtn-confirm confirm big-btn red-btn main-btn">立即购买</a>
+            <!-- <div class="bottom-padding"></div> -->
+            <div class="confirm-action content-foot clearfix" v-show="true">
+              <!-- 加入购物车 -->
+              <div class="big-btn-1-1" v-show="skuType==2">
+                <a href="javascript:;" class="js-confirm-it big-btn red-btn main-btn" @click="addCart">加入购物车</a>
+              </div>
+              <!-- 立即购买 -->
+              <div class="big-btn-1-1" v-show="skuType==3">
+                <a href="javascript:;" class="js-confirm-it big-btn red-btn main-btn">下一步</a>
+              </div>
+              <!-- 选择规格 -->
+              <div class="big-btn-2-1" v-show="skuType==1">
+                <a href="javascript:;" class="js-mutiBtn-confirm cart big-btn orange-btn vice-btn" @click="addCart">加入购物车</a>
+                <a href="javascript:;" class="js-mutiBtn-confirm confirm big-btn red-btn main-btn">立即购买</a>
+              </div>
             </div>
           </div>
         </div>
-      </div>
+      </transition>
       <div class="motify" style="display: none;" :style="{display: showAddMessage ? 'block' : 'none'}">
         <div class="motify-inner">已成功添加到购物车</div>
       </div>
